WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99993
[EFL][WK2] Memory leak in Ewk_Form_Submission_Request::fieldValue()
https://bugs.webkit.org/show_bug.cgi?id=99993
Summary
[EFL][WK2] Memory leak in Ewk_Form_Submission_Request::fieldValue()
Chris Dumez
Reported
2012-10-22 06:51:53 PDT
In Ewk_Form_Submission_Request::fieldValue(), we should adopt the WKStringRef returned by toCopiedAPI() to avoid a leak.
Attachments
Patch
(1.64 KB, patch)
2012-10-22 06:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-22 06:53:57 PDT
Created
attachment 169900
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-22 08:03:15 PDT
Comment on
attachment 169900
[details]
Patch Clearing flags on attachment: 169900 Committed
r132073
: <
http://trac.webkit.org/changeset/132073
>
WebKit Review Bot
Comment 3
2012-10-22 08:03:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug