[EFL][WK2] Memory leak in Ewk_Form_Submission_Request::fieldValue() https://bugs.webkit.org/show_bug.cgi?id=99993

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-22
Reviewed by Kenneth Rohde Christiansen.

Adopt the WKStringRef returned by toCopiedAPI() in
Ewk_Form_Submission_Request::fieldValue() to avoid
a memory leak.

* UIProcess/API/efl/ewk_form_submission_request.cpp:
(Ewk_Form_Submission_Request::fieldValue):

Canonical link: https://commits.webkit.org/118006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132073 268f45cc-cd09-0410-ab3c-d52691b4dbfc